# kurippa

./: .gitignore  README.md  activation.html  coverage.json  eslint.config.js  package.json  pnpm-lock.yaml  settings.html  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml  bump-version.yml  coverage.yml
coverage/: coverage-summary.json
scripts/: bump-version.sh
src/: activationMain.test.tsx  activationMain.tsx  main.tsx  settings.css.ts  settingsMain.test.ts  settingsMain.tsx  setupTests.ts  theme.css.ts  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/assets/ja.lproj/: InfoPlist.strings
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: events.rs  lib.rs  main.rs  paste.rs  settings.rs  shortcuts.rs  window.rs
src-tauri/src/clipboard/: hash.rs  image.rs  mod.rs  poller.rs  skip.rs
src-tauri/src/clipboard/platform/: macos.rs  mod.rs  windows.rs
src-tauri/src/clipboard/poller/: file_url.rs  mod.rs  regular.rs
src-tauri/src/commands/: app.rs  folders.rs  history.rs  license.rs  mod.rs  paste.rs  permissions.rs
src-tauri/src/db/: folders.rs  items.rs  mod.rs  schema.rs  tests.rs  types.rs
src-tauri/src/license/: api.rs  mod.rs  store.rs  types.rs
src/atoms/: clipboard.ts  derived.ts  folders.ts  multiSelect.ts  navigation.ts  settings.ts  ui.ts
src/constants/: animation.ts  errors.ts  events.ts
src/entries/: base.ts  color.ts  filePath.ts  image.ts  index.test.ts  index.ts  rtf.ts  text.ts  url.ts
src/hooks/: useApp.test.ts  useApp.ts  useAppKeyboard.test.ts  useAppKeyboard.ts  useAppNavigation.test.ts  useAppNavigation.ts  useAppState.test.ts  useAppState.ts  useClearConfirm.test.ts  useClearConfirm.ts  useClipboardHistory.test.ts  useClipboardHistory.ts  useDefaultSeparator.test.ts  useDefaultSeparator.ts  useDeleteAnimation.test.ts  useDeleteAnimation.ts  useFolderActions.test.ts  useFolderActions.ts  useFolderDeleteConfirm.test.ts  useFolderDeleteConfirm.ts  useFolderNameInput.test.tsx  useFolderNameInput.ts  useFolderPicker.test.ts  useFolderPicker.ts  useFolders.test.ts  useFolders.ts  useImagePreview.test.ts  useImagePreview.ts  (+34 more)
(+164 files in other folders)
