[package]
name = "kurippa"
version = "1.0.9"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kurippa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "protocol-asset", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", features = ["png", "jpeg", "webp", "gif"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
arboard = "3"
rxing = { version = "0.5", default-features = false, features = ["image"] }
tauri-plugin-log = "2.8.0"
log = "0.4"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
rdev = { git = "https://github.com/fufesou/rdev", rev = "a90dbe1172f8832f54c97c62e823c5a34af5fdfe" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
gethostname = "0.4"
tauri-plugin-store = "2"
tokio = { version = "1", features = ["time"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSPasteboard", "NSPasteboardItem", "NSWorkspace", "NSRunningApplication"] }
objc2-foundation = { version = "0.2", features = ["NSData", "NSString", "NSArray"] }
core-foundation = "0.10"
plist = "1"
core-graphics = { version = "0.24", features = ["highsierra"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
] }

[dev-dependencies]
tempfile = "3"

